# AAPTS

./: CMakeLists.txt  README.md
aosp/frameworks/base/libs/androidfw/: ConfigDescription.cpp
aosp/frameworks/base/tools/aapt/: AaptConfig.cpp  Android.bp  Main.cpp  ResourceTable.cpp  SdkConstants.h
aosp/frameworks/base/tools/aapt/tests/: AaptConfig_test.cpp
aosp/frameworks/base/tools/aapt2/: Android.bp  ResourceTable.cpp
aosp/frameworks/base/tools/aapt2/cmd/: Link.cpp
aosp/frameworks/base/tools/aapt2/link/: ManifestFixer.cpp  ReferenceLinker.cpp
aosp/frameworks/base/tools/aapt2/text/: Unicode.cpp
aosp/system/core/libcutils/include/cutils/: threads.h
aosp/system/logging/liblog/include/log/: log_event_list.h
aosp/system/logging/liblog/include/private/: android_logger.h
cmake/: CMakeLists.txt
cmake/aapt/: CMakeLists.txt
cmake/aapt2/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/androidfw/: CMakeLists.txt
cmake/lib/expat/: CMakeLists.txt
cmake/lib/fmtlib/: CMakeLists.txt
cmake/lib/libbase/: CMakeLists.txt
cmake/lib/libbuildversion/: CMakeLists.txt
cmake/lib/libcutils/: CMakeLists.txt
cmake/lib/libcxx/: CMakeLists.txt
cmake/lib/libcxxabi/: CMakeLists.txt
cmake/lib/libincfs-utils/: CMakeLists.txt
cmake/lib/liblog/: CMakeLists.txt
cmake/lib/libpng/: CMakeLists.txt
cmake/lib/libutils/: CMakeLists.txt
cmake/lib/libziparchive/: CMakeLists.txt
cmake/lib/protobuf/: CMakeLists.txt
cmake/lib/zlib/: CMakeLists.txt
